--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "nx": "14.0.3",
     "@nrwl/cli": "14.0.3",
     "@nrwl/workspace": "14.0.3",
-    "typescript": "~4.6.2",
-    "prettier": "^2.5.1"
+    "husky": "^7.0.4",
+    "nx": "14.0.3",
+    "prettier": "^2.5.1",
+    "typescript": "~4.6.2"
   }
 }
