--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "27.5.1",
     "nx": "14.0.3",
     "prettier": "^2.5.1",
+    "prisma": "^3.13.0",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
