chore: Setup Schema for lead
- Prisma schema added
- Fixed docker files to remove access issue on .cache folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - db:/var/lib/mysql
+      - ./docker/db-init:/docker-entrypoint-initdb.d
 
 volumes:
   db:
