--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "migrations": "docker-compose run api npx prisma migrate dev --schema=apps/api/prisma/schema.prisma",
+    "create_migrations": "npm run migrations -- --create-only --skip-seed",
+    "migrate:dev": "npm run migrations"
   },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.13.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
