--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "heubert",
   "version": "0.0.0",
   "license": "MIT",
+  "prisma": {
+    "seed": "ts-node apps/api/prisma/seed.ts"
+  },
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
     "migrations": "docker-compose run api npx prisma migrate dev --schema=apps/api/prisma/schema.prisma",
     "create_migrations": "npm run migrations -- --create-only --skip-seed",
-    "migrate:dev": "npm run migrations"
+    "migrate:dev": "npm run migrations --skip-seed",
+    "prisma:seed": "docker-compose run api npx prisma db seed"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +20,9 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.13.0",
+    "@types/moment": "^2.13.0",
+    "csv-parser": "^3.0.0",
+    "moment": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
@@ -31,7 +38,7 @@
     "@nrwl/node": "14.0.5",
     "@nrwl/workspace": "14.0.3",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
+    "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "eslint": "~8.12.0",
@@ -42,7 +49,7 @@
     "prettier": "^2.5.1",
     "prisma": "^3.13.0",
     "ts-jest": "27.1.4",
-    "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.6.4"
   }
 }
