--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/apollo": "^10.0.9",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.10",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.13.0",
     "@types/moment": "^2.13.0",
+    "apollo-server-express": "^3.6.7",
     "csv-parser": "^3.0.0",
+    "graphql": "^16.4.0",
     "moment": "^2.29.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
