--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "apollo-server-express": "^3.6.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "core-js": "^3.6.5",
     "csv-parser": "^3.0.0",
     "graphql": "^16.4.0",
     "moment": "^2.29.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-router-dom": "6.3.0",
     "reflect-metadata": "^0.1.13",
+    "regenerator-runtime": "0.13.7",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
   },
@@ -37,23 +42,38 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.0.3",
+    "@nrwl/cypress": "14.0.5",
     "@nrwl/eslint-plugin-nx": "14.0.5",
     "@nrwl/jest": "14.0.5",
     "@nrwl/linter": "14.0.5",
     "@nrwl/nest": "^14.0.5",
     "@nrwl/node": "14.0.5",
+    "@nrwl/react": "^14.0.5",
+    "@nrwl/web": "14.0.5",
     "@nrwl/workspace": "14.0.3",
+    "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "^16.11.7",
+    "@types/react": "18.0.1",
+    "@types/react-dom": "18.0.0",
+    "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "babel-jest": "27.5.1",
+    "cypress": "^9.1.0",
     "eslint": "~8.12.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.29.4",
+    "eslint-plugin-react-hooks": "4.4.0",
     "husky": "^7.0.4",
     "jest": "27.5.1",
     "nx": "14.0.3",
     "prettier": "^2.5.1",
     "prisma": "^3.13.0",
+    "react-test-renderer": "18.0.0",
     "ts-jest": "27.1.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.6.4"
