--- a/apps/frontend/project.json
+++ b/apps/frontend/project.json
@@ -48,7 +48,9 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "frontend:build",
-        "hmr": true
+        "hmr": true,
+        "host": "0.0.0.0",
+        "port": 3000
       },
       "configurations": {
         "development": {
