--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react-router-dom": "5.3.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
+    "autoprefixer": "^10.4.7",
     "babel-jest": "27.5.1",
     "cypress": "^9.1.0",
     "eslint": "~8.12.0",
@@ -71,9 +72,11 @@
     "husky": "^7.0.4",
     "jest": "27.5.1",
     "nx": "14.0.3",
+    "postcss": "^8.4.13",
     "prettier": "^2.5.1",
     "prisma": "^3.13.0",
     "react-test-renderer": "18.0.0",
+    "tailwindcss": "^3.0.24",
     "ts-jest": "27.1.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.6.4"
