feat: List leads

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MYSQL_DATABASE=heubert
 MYSQL_USER=heubert
 MYSQL_PASSWORD=heubert
 MYSQL_ROOT_PASSWORD=heubert
+NX_GRAPHQL_URI=http://localhost:5000/graphql
