--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.2",
     "@heroicons/react": "^1.0.6",
     "@nestjs/apollo": "^10.0.9",
     "@nestjs/common": "^8.0.0",
@@ -52,6 +53,7 @@
     "@nrwl/react": "^14.0.5",
     "@nrwl/web": "14.0.5",
     "@nrwl/workspace": "14.0.3",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "^16.11.7",
