--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.2",
+    "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
     "@nestjs/apollo": "^10.0.9",
     "@nestjs/common": "^8.0.0",
