--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@nestjs/graphql": "^10.0.10",
     "@nestjs/platform-express": "^8.0.0",
     "@prisma/client": "^3.13.0",
+    "@types/chartjs": "0.0.31",
     "@types/moment": "^2.13.0",
     "apollo-server-express": "^3.6.7",
+    "chart.js": "^3.7.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
@@ -34,6 +36,7 @@
     "graphql": "^16.4.0",
     "moment": "^2.29.3",
     "react": "18.0.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.0.0",
     "react-router-dom": "6.3.0",
     "reflect-metadata": "^0.1.13",
