--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 DATABASE_URL=mysql://heubert:heubert@mysql:3306/heubert
+shadowDatabaseUrl="mysql://heubert:heubert@mysql:3306/heubert-shadow"
 MYSQL_DATABASE=heubert
 MYSQL_USER=heubert
 MYSQL_PASSWORD=heubert
